student manage profile and upload documents

--- a/internship_system/placement/templates/student/base.html
+++ b/internship_system/placement/templates/student/base.html
@@ -30,7 +30,7 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="{% url 'student_dashboard' %}">Dashboard</a></li>
-								<li><a href="#">My Profile</a></li>
+								<li><a href="{% url 'student_profile' %}">My Profile</a></li>
 								<li><a href="#">Internship Opportunities</a></li>
 								<li><a href="#">My Applications</a></li>
 								<li><a href="#">Logbook</a></li>
