--- a/internship_system/placement/templates/student/update_email.html
+++ b/internship_system/placement/templates/student/update_email.html
@@ -2,14 +2,20 @@
 
 {% block content %}
 
-<h2>Update Email</h2>
+<div class="form-wrapper">
 
-<p>Current Email: <strong>{{ current_email }}</strong></p>
+  <h2>Update Email</h2>
+
+  <p>Current Email: <strong>{{ current_email }}</strong></p>
 
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
+
+  <div class="form-actions">
   <button type="submit">Save</button>
+  </div>
 </form>
 
+</div>
 {% endblock %}
