--- a/internship_system/placement/templates/student/delete_document.html
+++ b/internship_system/placement/templates/student/delete_document.html
@@ -1,11 +1,18 @@
 {% extends 'student/base.html' %}
 
 {% block content %}
-<p>Delete Document</p>
-<p>Are you sure you want to delete this document?</p>
+<div class="form-wrapper">
+
+  <p>Delete Document</p>
+  <p>Are you sure you want to delete this document?</p>
+
 <form method="post">
   {% csrf_token %}
-  <button type="submit">Yes, Delete</button>
-  <a href="{% url 'student_profile' %}">Cancel</a>
+  <div class="form-actions"></div>
+    <button type="submit">Yes, Delete</button>
+    <a href="{% url 'student_profile' %}">Cancel</a>
+  </div>
 </form>
+
+</div>
 {% endblock %}
