--- a/internship_system/placement/templates/student/edit_document.html
+++ b/internship_system/placement/templates/student/edit_document.html
@@ -1,11 +1,20 @@
 {% extends 'student/base.html' %}
 
 {% block content %}
-<h2>Edit Document</h2>
+<div class="form-wrapper">
+
+  <h2>Edit Document</h2>
+
 <form method="post" enctype="multipart/form-data">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">Save Changes</button>
+
+  <div class="form-actions">
+    <button type="submit">Save Changes</button>
+    <a href="{% url 'student_profile' %}">Cancel</a>
+  </div>
 </form>
-<a href="{% url 'student_profile' %}">Cancel</a>
+
+</div>
+
 {% endblock %}
