create evaluation page

--- a/internship_system/placement/templates/company/base.html
+++ b/internship_system/placement/templates/company/base.html
@@ -28,27 +28,14 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="{% url 'company_dashboard' %}" id="dashboard-link"><span class="icon solid fa-home">Dashboard</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Interns</span></a></li>
+								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-user">Interns</span></a></li>
 								<li><a href="#" id="about-link"><span class="icon solid fa-user">Internship Application</span></a></li>
-								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Logbooks</span></a></li>
-                                <li><a href="{% url 'interns_attendance'%}" id="contact-link"><span class="icon solid fa-envelope">Attendance</span></a></li>
-                                <li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Evaluation</span></a></li>
-                                <li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Notifications</span></a></li>
+								<li><a href="#contact" id="contact-link"><span class="icon solid fa-address-book">Logbooks</span></a></li>
+                                <li><a href="{% url 'interns_attendance' %}" id="contact-link"><span class="icon solid fa-calendar">Attendance</span></a></li>
+                                <li><a href="{% url 'evaluation_list' %}" id="contact-link"><span class="icon solid fa-check">Evaluation</span></a></li>
+                                <li><a href="#contact" id="contact-link"><span class="icon solid fa-bell">Notifications</span></a></li>
 							</ul>
 						</nav>
-
-				</div>
-
-				<div class="bottom">
-
-					<!-- Social Icons -->
-						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
 
 				</div>
 
