--- a/internship_system/placement/templates/company/dashboard.html
+++ b/internship_system/placement/templates/company/dashboard.html
@@ -1,6 +1,6 @@
 {% extends "Company/base.html" %}
 
-{% block title %}Company Supervisor Dashboard{% endblock %}
+{% load static %}
 
 {% block content %}
 
@@ -25,7 +25,7 @@
             <p>{{ total_interns }}</p>
         </a>
 
-        <a href="{% url 'company_applications' %}" class="card">
+        <a href="#" class="card">
             <h3>Pending Applications</h3>
             <p>{{ pending_applications }}</p>
         </a>
