--- a/internship_system/placement/templates/admin/admin.html
+++ b/internship_system/placement/templates/admin/admin.html
@@ -145,6 +145,7 @@
 							<!-- Content -->
 							<nav id="nav">
 							<ul>
+								<li><a href="internships"><h4>Internships</h4></a></li>
 								<li><a href="users"><h4>User List</h4></a></li>
 								<li><a href="companies"><h4>Company Information</h4></a></li>
 							</ul>
