--- a/internship_system/placement/templates/student/base.html
+++ b/internship_system/placement/templates/student/base.html
@@ -31,7 +31,7 @@
 							<ul>
 								<li><a href="{% url 'student_dashboard' %}">Dashboard</a></li>
 								<li><a href="{% url 'student_profile' %}">My Profile</a></li>
-								<li><a href="#">Internship Opportunities</a></li>
+								<li><a href="{% url 'internship_list' %}">Internship Opportunities</a></li>
 								<li><a href="#">My Applications</a></li>
 								<li><a href="#">Logbook</a></li>
 								<li><a href="#">Attendance</a></li>
