--- a/internship_system/placement/templates/company/base.html
+++ b/internship_system/placement/templates/company/base.html
@@ -29,11 +29,11 @@
 							<ul>
 								<li><a href="{% url 'company_dashboard' %}" id="dashboard-link"><span class="icon solid fa-home">Dashboard</span></a></li>
 								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-user">Interns</span></a></li>
-								<li><a href="#" id="about-link"><span class="icon solid fa-user">Internship Application</span></a></li>
+								<li><a href="{% url 'supervisor_applications' %}" id="about-link"><span class="icon solid fa-user">Internship Application</span></a></li>
 								<li><a href="#contact" id="contact-link"><span class="icon solid fa-address-book">Logbooks</span></a></li>
                                 <li><a href="{% url 'interns_attendance' %}" id="contact-link"><span class="icon solid fa-calendar">Attendance</span></a></li>
                                 <li><a href="{% url 'evaluation_list' %}" id="contact-link"><span class="icon solid fa-check">Evaluation</span></a></li>
-                                <li><a href="#contact" id="contact-link"><span class="icon solid fa-bell">Notifications</span></a></li>
+                                <li><a href="{% url 'notifications' %}" id="contact-link"><span class="icon solid fa-bell">Notifications</span></a></li>
 							</ul>
 						</nav>
 
